Fix display on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ body {
     background: url(/images/background.png);
     height: 100%;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 #websiteTitle {
@@ -30,4 +31,14 @@ body {
 
 #newModal p {
     margin-bottom: .5em;
+}
+
+@media screen and (max-width: 680px) {
+    #markdown {
+        padding: 0!important;
+    }
+
+    #markdown svg {
+        max-width: 100%;
+    }
 }
